@@ -1,5 +1,8 @@
 2017-08-02  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/81640
+	* g++.dg/warn/Wshadow-compatible-local-2.C: New test.
+
 	PR middle-end/79499
 	* gcc.dg/pr79499.c: New test.
 
