@@ -1,3 +1,9 @@
+2017-08-02  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/81640
+	* call.c (build_user_type_conversion_1): Only call
+	lookup_fnfields_slot if totype is CLASS_TYPE_P.
+
 2017-07-31  Jason Merrill  <jason@redhat.com>
 
 	* decl.c (declare_global_var): Set DECL_CONTEXT.
